--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <main></main>
-    <script src="js/strings.js"></script>    
+    <script src="js/prompt.js"></script>    
   </body>
 </html>
